--- a/Informe/ejercicio6/ej6.tex
+++ b/Informe/ejercicio6/ej6.tex
@@ -159,5 +159,5 @@ Luego, como el Tp lo pide, es necesario que se salte a la tarea $idle$ por ende 
 
 \subsection{item h)}
 
-Este itém lo testiamos y todo andubo bien, como no va a estar en el tp final borramos el código que lo implementaba, pero fue testiado.
+Este itém lo testiamos y todo anduvo bien, como no va a estar en el tp final borramos el código que lo implementaba, pero fue testiado.
 
