--- a/Informe/ejercicio6/ej6.tex
+++ b/Informe/ejercicio6/ej6.tex
@@ -153,11 +153,21 @@ Para este punto lo que hacemos en la interrupción 0x46 es pushear en la pila lo
 
 El código es el siguiente:\\
 
+
+\begin{figure}[H]
+\begin{center}
+\minipage{1.00\textwidth}
+\includegraphics[width=\linewidth]{ejercicio6/isr0x46.png}
+\caption{{\small \textit{Manejo de interrupciones}}}
+\endminipage
+\end{center}
+\end{figure}
+
 \begin{figure}[H]
 \begin{center}
 \minipage{1.00\textwidth}
 \includegraphics[width=\linewidth]{ejercicio6/syscall_manejar.png}
-\caption{{\small \textit{Manejo de interrupciones}}}
+\caption{{\small \textit{Función que maneja los syscall}}}
 \endminipage
 \end{center}
 \end{figure}
